# thegame

./: .gitignore  CMakeLists.txt  README.md  dependencies.csv
Engine/: CMakeLists.txt
Engine/include/kat/: Application.hpp  Event.hpp  Utils.hpp  Window.hpp
Engine/include/kat/renderer/: Buffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Tileset.hpp  VertexArray.hpp
Engine/src/: Application.cpp  Buffer.cpp  Event.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Tileset.cpp  Utils.cpp  VertexArray.cpp  Window.cpp
Game/: CMakeLists.txt
Game/include/: camera.hpp  main.hpp  tilemap.hpp
Game/src/: camera.cpp  main.cpp  tilemap.cpp
KatEngine/Resources/Shaders/: main.frag.glsl  main.vert.glsl  s2.frag.glsl  s2.vert.glsl
data_systems/: Region.md
include/kat/renderer/: Renderer.hpp
src/: Application.cpp  Renderer.cpp  Window.cpp
